--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,13 @@
         "doctrine/doctrine-bundle": "^2.7",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.13",
+        "jms/serializer-bundle": "^4.0",
+        "sensio/framework-extra-bundle": "^6.2",
         "symfony/console": "5.4.*",
         "symfony/dotenv": "5.4.*",
         "symfony/flex": "^1.17|^2",
         "symfony/framework-bundle": "5.4.*",
+        "symfony/messenger": "5.4.*",
         "symfony/proxy-manager-bridge": "5.4.*",
         "symfony/runtime": "5.4.*",
         "symfony/yaml": "5.4.*"
@@ -67,6 +70,17 @@
         }
     },
     "require-dev": {
-        "symfony/maker-bundle": "^1.45"
+        "codeception/codeception": "^4.0",
+        "codeception/module-asserts": "^2.0",
+        "codeception/module-doctrine2": "^2.0",
+        "codeception/module-phpbrowser": "^2.0.3",
+        "codeception/module-rest": "^2.0",
+        "codeception/module-symfony": "^2.0",
+        "phpspec/prophecy-phpunit": "^2.0",
+        "phpunit/phpunit": "^9.5",
+        "symfony/browser-kit": "5.4.*",
+        "symfony/css-selector": "5.4.*",
+        "symfony/maker-bundle": "^1.45",
+        "symfony/phpunit-bridge": "^6.1"
     }
 }
