--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,8 @@
 ###< symfony/framework-bundle ###
 
 .env
+
+###> symfony/phpunit-bridge ###
+.phpunit.result.cache
+/phpunit.xml
+###< symfony/phpunit-bridge ###
