--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,8 @@ services:
       - ./:/var/www/html
     depends_on:
       - db
+    links:
+      - db
 
   nginx:
     container_name: dokobit_nginx
@@ -42,6 +44,7 @@ services:
       - ./build/nginx/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - php
+    links:
       - db
 
   phpmyadmin:
@@ -50,7 +53,7 @@ services:
     depends_on:
       - db
     environment:
-      UPLOAD_LIMIT: 1024M
+      UPLOAD_LIMIT: 2048M
       PMA_HOST: db
       PMA_USER: root
       PMA_PASSWORD: rootPassword
