--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "symfony/mime": "5.4.*",
         "symfony/proxy-manager-bridge": "5.4.*",
         "symfony/runtime": "5.4.*",
-        "symfony/yaml": "5.4.*"
+        "symfony/yaml": "5.4.*",
+        "ext-zip": "*"
     },
     "config": {
         "allow-plugins": {
